--- a/processcapabilities.html
+++ b/processcapabilities.html
@@ -70,41 +70,36 @@
     <span class="lineend"></span>
     <span class="subtitle">Advanced Composite</span>
     <span class="subsubtitle">Product Development</span>
-    <!-- <div class="flowchart">
+    <div class="flowchart">
       <div class="flow1">
-        <div class="flow1-1">
-          <div class="flow1-1-2">
-            <span>Design and Development</span>
-          </div>
-        </div>
-        <div class="flow1-2">
-          <div class="flow1-2-1">
-            <span>Design feasitility</span>
-          </div>
-          <div class="flow1-2-2">
-            <span>Tooling and machining</span>
-          </div>
-        </div>
+        <div class="linestartflow"></div>
+        <span>Design and Development</span>
       </div>
       <div class="flow2">
-        <div class="flow2-1">
-          <div class="flow2-1-1">
-            <span>Prototype development</span>
-          </div>
-          <div class="flow2-1-2">
-           <span>Testing</span>
-          </div>
-        </div>
-        <div class="flow2-2">
-          <div class="flow2-2-1">
-            <span>Production optimization</span>
-          </div>
-          <div class="flow2-2-2">
-            <span>Product manufacturing</span>
-          </div>
-        </div>
+        <div class="linestartflow"></div>
+        <span>Design feasitility</span>
       </div>
-    </div> -->
+      <div class="flow3">
+        <div class="linestartflow"></div>
+        <span>Tooling and machining</span>
+      </div>
+      <div class="flow4">
+        <div class="linestartflow"></div>
+        <span>Prototype development</span>
+      </div>
+      <div class="flow5">
+        <div class="linestartflow"></div>
+        <span>Testing</span>
+      </div>
+      <div class="flow6">
+        <div class="linestartflow"></div>
+        <span>Production optimization</span>
+      </div>
+      <div class="flow7">
+        <div class="linestartflow"></div>
+        <span>Product manufacturing</span>
+      </div>
+    </div>
     <div class="processflow">
       <span class="subsubtitle">Design and development</span>
       <span class="parag">Aviscraft with its expertin in design and development has provided long term solutions with optimized design and make them familiar with key benefits of using composite as a replacements of other materials.</span>
@@ -120,7 +115,7 @@
     <div class="processflow">
       <span class="subsubtitle">Prototype development and manufacturing</span>
       <span class="parag">Our composite workshop in equipped to provide our stop solution from parts manufacturing to assembly of compsite structures under our roof. High proficient and experienced human resource in composite manufacturing adds and the core strength of our organization.</span><br>
-      <span class="parag heading">over manufacturing process include:</span>
+      <span class="parag heading">our manufacturing process include:</span>
       <span class="parag points">Hand laying</span>
       <span class="parag points">Mold making(small batch production)</span>
       <span class="parag points">Vaccum assisted resine imfusion moulding</span>
@@ -136,8 +131,8 @@
       <span class="parag">Aviscraft advanced materials offen wide range of woves fabric for various outdoor/indoor applications we produce fabrics with the latest technology by offering our customer consistent quality and immatched programmes.</span>
     </div>
     <div class="headingflow">
-      <span class="subtitle">Weaving</span>
-      <span class="parag">Aviscraft advanced materials offen wide range of woves fabric for various outdoor/indoor applications we produce fabrics with the latest technology by offering our customer consistent quality and immatched programmes.</span>
+      <span class="subtitle">Spinning</span>
+      <span class="parag">With decades of experience in spinning industry. We have enormous knowledge on processing of advanced fibres in our facility. Ring spun yarns are made from speciality fibres are processed with host technologists and man power.</span>
     </div>
   </div>
   <div class="quickfooter">
