--- a/products.html
+++ b/products.html
@@ -73,7 +73,7 @@
         <span >Carbon fiber composites</span>
       </div>
       <div class="productcontent">
-        <p>To help you navigate the complexities involved in designing and manufacturing composites products we provides support through the value chain.</p>
+        <p>Carbon fiber laminates finds itself in the fields of robotics, UAV and medical applications. Laminates  are especially developed to meet the most strongest repair and retrofitting standards.</p>
       </div>
       <div class="rmcont">
         <button class="rmbutton">READ MORE <i class="fas fa-arrow-right"></i></button>
@@ -81,10 +81,10 @@
     </div>
     <div class="card">
       <div class="title">
-        <span >Carbon laminates</span>
+        <span >Coated and laminated fabrics</span>
       </div>
       <div class="productcontent">
-        <p>We manufacture and supply strong and lightweight composites structures using the latest Pultrusion technology under its _ range of Pultruded carbon-Fiber laminates.</p>
+        <p>Coated and laminated fabrics are typically moves, knitted or non-woven textile fabric which are continued with a thin, flexible film of a natural or synthetic polythene substance to achieve a designed property.</p>
       </div>
       <div class="rmcont">
         <button class="rmbutton">READ MORE <i class="fas fa-arrow-right"></i></button>
@@ -111,7 +111,7 @@
         <span >Reinforcement fabrics</span>
       </div>
       <div class="productcontent">
-        <p>To help you navigate the complexities involved in designing and manufacturing composites products we provides support through the value chain.</p>
+        <p>Our range of women reinforcement fabric are lightweight yet study with good fatigue and impact resistance. They possess excellent handling characteristics and superior strength and stiffness.</p>
       </div>
       <div class="rmcont">
         <button class="rmbutton">READ MORE <i class="fas fa-arrow-right"></i></button>
@@ -119,10 +119,10 @@
     </div>
     <div class="card">
       <div class="title">
-        <span >Reinforcement unidirectional</span>
+        <span>Fibre reinforced polymer composites </span>
       </div>
       <div class="productcontent">
-        <p>We manufacture and supply strong and lightweight composites structures using the latest Pultrusion technology under its _ range of Pultruded carbon-Fiber laminates.</p>
+        <p>Composites are also made with fibers such as glass fiber, Kevlar and other natural fibers. The use of these composites material provides engineers the ability to tailor the combination of fibers and necin to meet the design requirement and performance.</p>
       </div>
       <div class="rmcont">
         <button class="rmbutton">READ MORE <i class="fas fa-arrow-right"></i></button>
@@ -133,7 +133,7 @@
         <span >Spun yarn</span>
       </div>
       <div class="productcontent">
-        <p>To assist first time users &amp; enthusiast for building own carbon-fiber parts we market and sells a wide array of recreational ready to use Carbon Composite Kits &amp; consumables under brand.</p>
+        <p>Wide range of Technical yarns and swing threads for high performance applications made from natural and synthetic fibers.</p>
       </div>
       <div class="rmcont">
         <button class="rmbutton">READ MORE <i class="fas fa-arrow-right"></i></button>
