--- a/processcapabilities.html
+++ b/processcapabilities.html
@@ -116,11 +116,11 @@
       <span class="subsubtitle">Prototype development and manufacturing</span>
       <span class="parag">Our composite workshop in equipped to provide our stop solution from parts manufacturing to assembly of compsite structures under our roof. High proficient and experienced human resource in composite manufacturing adds and the core strength of our organization.</span><br>
       <span class="parag heading">our manufacturing process include:</span>
-      <span class="parag points">Hand laying</span>
-      <span class="parag points">Mold making(small batch production)</span>
-      <span class="parag points">Vaccum assisted resine imfusion moulding</span>
-      <span class="parag points">Resin transfer moulding</span>
-      <span class="parag points">Proprag and autoclare</span>
+      <span class="parag points"><i class="fas fa-circle"></i>Hand laying</span>
+      <span class="parag points"><i class="fas fa-circle"></i>Mold making(small batch production)</span>
+      <span class="parag points"><i class="fas fa-circle"></i>Vaccum assisted resine imfusion moulding</span>
+      <span class="parag points"><i class="fas fa-circle"></i>Resin transfer moulding</span>
+      <span class="parag points"><i class="fas fa-circle"></i>Proprag and autoclare</span>
     </div>
     <div class="processflow">
       <span class="subsubtitle">Testing</span>
