--- a/cfcproduct.html
+++ b/cfcproduct.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
 
@@ -45,12 +44,12 @@
         <li><a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities </a></li>
         <li>
           <div class="dropdown">
-            <button class="dropbtn"><a href="products.html" title="Products" data-ripple="" class="menu-active"> Products
+            <button class="dropbtn"><a href="products.html" title="Products" data-ripple=""> Products
               <i class="fa fa-caret-down"></i></a>
             </button>
             <div class="dropdown-content">
               <span class="maintitle">Advanced Composites</span>
-              <a href="cfcproduct.html">Carbon fiber composites</a>
+              <a href="cfcproduct.html" class="menu-active">Carbon fiber composites</a>
               <a href="cflproduct.html">Carbon fiber laminates</a>
               <a href="frpcproduct.html">Fiber reinforced polymer composites</a>
               <span class="maintitle">Technical Fabrics & Yarns</span>
@@ -71,7 +70,7 @@
             <a href="products.html" title="Products" data-ripple="" class="menu-active"> Products</a>
             <div class="dropdown-content">
               <span class="maintitle">Advanced Composites</span>
-              <a href="cfcproduct.html">Carbon fiber composites</a>
+              <a href="cfcproduct.html" class="menu-active">Carbon fiber composites</a>
               <a href="cflproduct.html">Carbon fiber laminates</a>
               <a href="frpcproduct.html">Fiber reinforced polymer composites</a>
               <span class="maintitle">Technical Fabrics & Yarns</span>
@@ -85,84 +84,46 @@
         </li>
     </div>
   </header><!-- #header -->
-
-  <div class="pagetitlebg">
+  <div class="productpagetitlebg">
       <img src="images/123.jpg">
-    <h1 class="centered"> Products</h1>
+    <h1 class="centered">Carbon fiber composites</h1>
   </div>
-  <div id="containermain" class="containermain">
-    <span class="maintitle">Advanced Composites</span>
-    <span class="linestart"></span>
-    <span class="lineend"></span>
-    <div class="card">
-      <div class="title">
-        <span >Carbon fiber composites</span>
-      </div>
-      <div class="productcontent">
-        <p>Carbon fibre composites are used in a range of high performance applications and is recognised for its excellent strength and stiffness compared to its weight.<p>
-      </div>
-      <div class="rmcont">
-        <a href="cfcproduct.html"><i class="fas fa-arrow-right"></i></a>
-      </div>
+  <div class="productpgsplit">
+    <div class="sidebar-content">
+      <span class="maintitle">Advanced Composites</span>
+      <a href="cfcproduct.html" class="menu-active">Carbon fiber composites
+        <i class="fas fa-chevron-right"></i>
+      </a>
+      <a href="cflproduct.html">Carbon fiber laminates
+        <i class="fas fa-chevron-right"></i>
+      </a>
+      <a href="frpcproduct.html">Fiber reinforced polymer composites
+        <i class="fas fa-chevron-right"></i>
+      </a>
+      <span class="maintitle">Technical Fabrics & Yarns</span>
+      <a href="rfproduct.html">Reinforcement fabrics
+        <i class="fas fa-chevron-right"></i>
+      </a>
+      <a href="clfproduct.html">Coated and laminated fabrics
+        <i class="fas fa-chevron-right"></i>
+      </a>
+      <a href="syproduct.html">Spun yarn
+        <i class="fas fa-chevron-right"></i>
+      </a>
     </div>
-    <div class="card">
-      <div class="title">
-        <span >Carbon fiber laminates</span>
+    <div class="main-content">
+      <div class="productproduct">
+        <span class="parag">Our composite workshop is an one stop solution for all your carbon fibre needs. We manufacture custom parts and provide consultancy to incorporate carbon fibre as the replacement for other conventional materials, as it is a popular choice in high performance.</span>
       </div>
-      <div class="productcontent">
-        <p>Carbon fibre laminates finds itself in the field of robotics, UAV, drone structures, motorsport, marine, automation and medical fields. Laminates are specially developed to meet the most stringent repair and retrofitting standards.</p>
+      <span>pictures</span>
+      <div class="productproduct">
+        <span class="parag">Boasting superb stiffness and tensile strength despite its minimal weight, carbon fibre is also renowned for its minimal thermal expansion and chemical resistance. Carbon fibre continues to be a go to choice in the aerospace and aviation industries. Modern commercial freight and passenger airlines feature carbon fibre composites, allowing them to be lighter and more fuel efficient.</span>
       </div>
-      <div class="rmcont">
-        <a href="cflproduct.html"><i class="fas fa-arrow-right"></i></a>
+      <div class="productproduct">
+        <span class="parag">Its weight and strength have also made carbon fibre popular in numerous military applications, including for helmets and other protective products, the wings on drones and other UAV’s to various weapons application.</span>
       </div>
-    </div>
-    <div class="card">
-      <div class="title">
-        <span >Fiber reinforced polymer composites</span>
-      </div>
-      <div class="productcontent">
-        <p>Composites are also made with fibres such as glass, Kevlar and other natural fibres. The use of these composite materials provide engineers the ability to tailor the combination of fibres and resin to meet the design requirement and performance.</p>
-      </div>
-      <div class="rmcont">
-        <a href="frpcproduct.html"><i class="fas fa-arrow-right"></i></a>
-      </div>
-    </div>
-  </div>
-  <div id="containermain" class="containermain containermainsub">
-    <span class="maintitle">Technical Fabrics & Yarns</span>
-    <span class="linestart"></span>
-    <span class="lineend1"></span>
-    <div class="card">
-      <div class="title">
-        <span >Reinforcement fabrics</span>
-      </div>
-      <div class="productcontent">
-        <p>Our range of woven reinforcement are lightweight yet sturdy with good fatigue and impact resistance. They are suitable for processing by all standard methods including wet-lay, vacuum bag and resin infusion and using all typical resin systems including epoxy, polyester and vinylester.</p>
-      </div>
-      <div class="rmcont">
-        <a href="rfproduct.html"><i class="fas fa-arrow-right"></i></a>
-      </div>
-    </div>
-    <div class="card">
-      <div class="title">
-        <span>Coated and laminated fabrics</span>
-      </div>
-      <div class="productcontent">
-        <p>Coated and laminated fabricsCoated and laminated fabrics are typically woven, knitted or non-woven textile fabrics which are combined with a thin, flexible film of a natural or synthetic polymeric substance to achieve desired property.</p>
-      </div>
-      <div class="rmcont">
-        <a href="clfproduct.html"><i class="fas fa-arrow-right"></i></a>
-      </div>
-    </div>
-    <div class="card">
-      <div class="title">
-        <span >Spun yarn</span>
-      </div>
-      <div class="productcontent">
-        <p>Wide range of Technical yarns and sewing threads for high performance applications are made from synthetic and natural fibres.</p>
-      </div>
-      <div class="rmcont">
-        <a href="syproduct.html"><i class="fas fa-arrow-right"></i></a>
+      <div class="productproduct">
+        <span class="parag">Everything from golf clubs and fishing poles to lacrosse and hockey sticks, to tennis and badminton racquets uses carbon fibre composites. It is also incredibly common to see carbon fibre used in high end bicycling segments.</span>
       </div>
     </div>
   </div>
@@ -197,7 +158,7 @@
         <a href="index.html"title="Home" data-ripple="">Home</a>
         <a href="aboutus.html" title="About Us" data-ripple=""> About Us</a>
         <a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities</a>
-        <a href="products.html" title="Products" data-ripple="" class="menu-active">Products</a>
+        <a href="products.html" title="Products" data-ripple="">Products</a>
         <a href="contactus.html" title="Contact Us" data-ripple=""> Contact Us</a>
       </div>
     </div>
