--- a/syproduct.html
+++ b/syproduct.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
 
@@ -45,7 +44,7 @@
         <li><a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities </a></li>
         <li>
           <div class="dropdown">
-            <button class="dropbtn"><a href="products.html" title="Products" data-ripple="" class="menu-active"> Products
+            <button class="dropbtn"><a href="products.html" title="Products" data-ripple=""> Products
               <i class="fa fa-caret-down"></i></a>
             </button>
             <div class="dropdown-content">
@@ -56,7 +55,7 @@
               <span class="maintitle">Technical Fabrics & Yarns</span>
               <a href="rfproduct.html">Reinforcement fabrics</a>
               <a href="clfproduct.html">Coated and laminated fabrics</a>
-              <a href="syproduct.html">Spun yarn</a>
+              <a href="syproduct.html" class="menu-active">Spun yarn</a>
             </div>
           </div> 
         </li>
@@ -77,7 +76,7 @@
               <span class="maintitle">Technical Fabrics & Yarns</span>
               <a href="rfproduct.html">Reinforcement fabrics</a>
               <a href="clfproduct.html">Coated and laminated fabrics</a>
-              <a href="syproduct.html">Spun yarn</a>
+              <a href="syproduct.html" class="menu-active">Spun yarn</a>
             </div>
             <a href="contactus.html" title="Contact Us" data-ripple=""> Contact Us</a>
           </div>
@@ -85,84 +84,89 @@
         </li>
     </div>
   </header><!-- #header -->
-
-  <div class="pagetitlebg">
+  <div class="productpagetitlebg">
       <img src="images/123.jpg">
-    <h1 class="centered"> Products</h1>
+    <h1 class="centered">Spun yarn</h1>
   </div>
-  <div id="containermain" class="containermain">
-    <span class="maintitle">Advanced Composites</span>
-    <span class="linestart"></span>
-    <span class="lineend"></span>
-    <div class="card">
-      <div class="title">
-        <span >Carbon fiber composites</span>
-      </div>
-      <div class="productcontent">
-        <p>Carbon fibre composites are used in a range of high performance applications and is recognised for its excellent strength and stiffness compared to its weight.<p>
-      </div>
-      <div class="rmcont">
-        <a href="cfcproduct.html"><i class="fas fa-arrow-right"></i></a>
-      </div>
+  <div class="productpgsplit">
+    <div class="sidebar-content">
+      <span class="maintitle">Advanced Composites</span>
+      <a href="cfcproduct.html">Carbon fiber composites
+        <i class="fas fa-chevron-right"></i>
+      </a>
+      <a href="cflproduct.html">Carbon fiber laminates
+        <i class="fas fa-chevron-right"></i>
+      </a>
+      <a href="frpcproduct.html">Fiber reinforced polymer composites
+        <i class="fas fa-chevron-right"></i>
+      </a>
+      <span class="maintitle">Technical Fabrics & Yarns</span>
+      <a href="rfproduct.html">Reinforcement fabrics
+        <i class="fas fa-chevron-right"></i>
+      </a>
+      <a href="clfproduct.html">Coated and laminated fabrics
+        <i class="fas fa-chevron-right"></i>
+      </a>
+      <a href="syproduct.html" class="menu-active">Spun yarn
+        <i class="fas fa-chevron-right"></i>
+      </a>
     </div>
-    <div class="card">
-      <div class="title">
-        <span >Carbon fiber laminates</span>
+    <div class="main-content">
+      <div class="productproduct">
+        <span class="parag">Aviscraft Advanced Materials Manufactures Technical yarns & Sewing threads for various applications using high performance ﬁbres like Meta Aramid (Nomex®), Para Aramid (Kevlar®), Mod Acrylic, Nylon 6 & 66, Polyester Super High Tenacity, FR Polyester, High Quality Cotton, Core Spun Lycra, PPS, PTFE, Carbon, Anti-static, PBI etc.</span>
       </div>
-      <div class="productcontent">
-        <p>Carbon fibre laminates finds itself in the field of robotics, UAV, drone structures, motorsport, marine, automation and medical fields. Laminates are specially developed to meet the most stringent repair and retrofitting standards.</p>
-      </div>
-      <div class="rmcont">
-        <a href="cflproduct.html"><i class="fas fa-arrow-right"></i></a>
-      </div>
-    </div>
-    <div class="card">
-      <div class="title">
-        <span >Fiber reinforced polymer composites</span>
-      </div>
-      <div class="productcontent">
-        <p>Composites are also made with fibres such as glass, Kevlar and other natural fibres. The use of these composite materials provide engineers the ability to tailor the combination of fibres and resin to meet the design requirement and performance.</p>
-      </div>
-      <div class="rmcont">
-        <a href="frpcproduct.html"><i class="fas fa-arrow-right"></i></a>
-      </div>
-    </div>
-  </div>
-  <div id="containermain" class="containermain containermainsub">
-    <span class="maintitle">Technical Fabrics & Yarns</span>
-    <span class="linestart"></span>
-    <span class="lineend1"></span>
-    <div class="card">
-      <div class="title">
-        <span >Reinforcement fabrics</span>
-      </div>
-      <div class="productcontent">
-        <p>Our range of woven reinforcement are lightweight yet sturdy with good fatigue and impact resistance. They are suitable for processing by all standard methods including wet-lay, vacuum bag and resin infusion and using all typical resin systems including epoxy, polyester and vinylester.</p>
-      </div>
-      <div class="rmcont">
-        <a href="rfproduct.html"><i class="fas fa-arrow-right"></i></a>
-      </div>
-    </div>
-    <div class="card">
-      <div class="title">
-        <span>Coated and laminated fabrics</span>
-      </div>
-      <div class="productcontent">
-        <p>Coated and laminated fabricsCoated and laminated fabrics are typically woven, knitted or non-woven textile fabrics which are combined with a thin, flexible film of a natural or synthetic polymeric substance to achieve desired property.</p>
-      </div>
-      <div class="rmcont">
-        <a href="clfproduct.html"><i class="fas fa-arrow-right"></i></a>
-      </div>
-    </div>
-    <div class="card">
-      <div class="title">
-        <span >Spun yarn</span>
-      </div>
-      <div class="productcontent">
-        <p>Wide range of Technical yarns and sewing threads for high performance applications are made from synthetic and natural fibres.</p>
-      </div>
-      <div class="rmcont">
-        <a href="syproduct.html"><i class="fas fa-arrow-right"></i></a>
+      <div style="overflow-x:auto;">
+        <table>
+          <tr>
+            <th>FIBRE TYPE</th>
+            <th>COUNT</th>
+            <th>PLY</th>
+            <th>SPINNING SYSTEM</th>
+            <th>APPLICATION</th>
+          </tr>
+          <tr>
+            <td>100% Polyester</td>
+            <td>Ne 30 - 40</td>
+            <td>1-8</td>
+            <td>RING SPUN</td>
+            <td>KNITTING, WEAVING</td>
+          </tr>
+          <tr>
+            <td>Polyester / Cotton blended</td>
+            <td>Ne 10 - 80</td>
+            <td>1-8</td>
+            <td>RING SPUN</td>
+            <td>KNITTING, WEAVING</td>
+          </tr>
+          <tr>
+            <td>Linen Blend (Cotton, Viscose, Modal, Poly)</td>
+            <td>Ne 30 - 60</td>
+            <td>1-4</td>
+            <td>RING SPUN</td>
+            <td>KNITTING, WEAVING</td>
+          </tr>
+          <tr>
+            <td>100% Para-Aramid Fibre</td>
+            <td>Ne 12 - 60</td>
+            <td>1-4</td>
+            <td>RING SPUN</td>
+            <td>SEWING THREAD</td>
+          </tr>
+          <tr>
+            <td>100% Meta-Aramid Fibre</td>
+            <td>Ne 12 - 60</td>
+            <td>1-4</td>
+            <td>RING SPUN</td>
+            <td>SEWING THREAD</td>
+          </tr>
+          <tr>
+            <td>100% Cotton </td>
+            <td>Ne 10 - 120</td>
+            <td>1-4</td>
+            <td>RING SPUN</td>
+            <td>KNITTING, WEAVING</td>
+          </tr>
+        </table>
       </div>
     </div>
   </div>
@@ -197,7 +201,7 @@
         <a href="index.html"title="Home" data-ripple="">Home</a>
         <a href="aboutus.html" title="About Us" data-ripple=""> About Us</a>
         <a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities</a>
-        <a href="products.html" title="Products" data-ripple="" class="menu-active">Products</a>
+        <a href="products.html" title="Products" data-ripple="">Products</a>
         <a href="contactus.html" title="Contact Us" data-ripple=""> Contact Us</a>
       </div>
     </div>
