--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
 </head>
 <script>
   function openNav() {
-    document.getElementById("mySidepanel").style.width = "150px";
+    document.getElementById("mySidepanel").style.width = "300px";
   }
 
   function closeNav() {
@@ -43,7 +43,23 @@
         <li><a href="index.html" title="Home" data-ripple=""> Home</a></li>
         <li><a href="aboutus.html" title="About Us" data-ripple="" class="menu-active"> About Us</a></li>
         <li><a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities </a></li>
-        <li><a href="products.html" title="Products" data-ripple="">Products</a></li>
+        <li>
+          <div class="dropdown">
+            <button class="dropbtn"><a href="products.html" title="Products" data-ripple=""> Products
+              <i class="fa fa-caret-down"></i></a>
+            </button>
+            <div class="dropdown-content">
+              <span class="maintitle">Advanced Composites</span>
+              <a href="cfcproduct.html">Carbon fiber composites</a>
+              <a href="cflproduct.html">Carbon fiber laminates</a>
+              <a href="frpcproduct.html">Fiber reinforced polymer composites</a>
+              <span class="maintitle">Technical Fabrics & Yarns</span>
+              <a href="rfproduct.html">Reinforcement fabrics</a>
+              <a href="clfproduct.html">Coated and laminated fabrics</a>
+              <a href="syproduct.html">Spun yarn</a>
+            </div>
+          </div> 
+        </li>
         <li><a href="contactus.html" title="Contact Us" data-ripple="">Contact Us </a></li>
       </ul>
         <li class="men">
@@ -53,6 +69,16 @@
             <a href="aboutus.html" title="About Us" data-ripple="" class="menu-active"> About Us</a>
             <a href="processcapabilities.html" title="Process Capabilities" data-ripple=""> Process Capabilities</a>
             <a href="products.html" title="Products" data-ripple="">Products</a>
+            <div class="dropdown-content">
+              <span class="maintitle">Advanced Composites</span>
+              <a href="cfcproduct.html">Carbon fiber composites</a>
+              <a href="cflproduct.html">Carbon fiber laminates</a>
+              <a href="frpcproduct.html">Fiber reinforced polymer composites</a>
+              <span class="maintitle">Technical Fabrics & Yarns</span>
+              <a href="rfproduct.html">Reinforcement fabrics</a>
+              <a href="clfproduct.html">Coated and laminated fabrics</a>
+              <a href="syproduct.html">Spun yarn</a>
+            </div>
             <a href="contactus.html" title="Contact Us" data-ripple=""> Contact Us</a>
           </div>
           <button class="openbtn" onclick="openNav()"><i class="fas fa-bars"></i></button> 
